; ModuleID = '/home/carl/AnghaBench/openssl/crypto/dh/extr_dh_ameth.c_dh_pkey_ctrl.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/dh/extr_dh_ameth.c_dh_pkey_ctrl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i64, i8*)* @dh_pkey_ctrl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dh_pkey_ctrl(i32* %0, i32 %1, i64 %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i64 %2, i64* %8, align 8
  store i8* %3, i8** %9, align 8
  %10 = load i32, i32* %7, align 4
  switch i32 %10, label %22 [
    i32 128, label %11
    i32 129, label %17
  ]

11:                                               ; preds = %4
  %12 = load i32*, i32** %6, align 8
  %13 = call i32 @EVP_PKEY_get0_DH(i32* %12)
  %14 = load i8*, i8** %9, align 8
  %15 = load i64, i64* %8, align 8
  %16 = call i32 @dh_buf2key(i32 %13, i8* %14, i64 %15)
  store i32 %16, i32* %5, align 4
  br label %23

17:                                               ; preds = %4
  %18 = load i32*, i32** %6, align 8
  %19 = call i32 @EVP_PKEY_get0_DH(i32* %18)
  %20 = load i8*, i8** %9, align 8
  %21 = call i32 @dh_key2buf(i32 %19, i8* %20)
  store i32 %21, i32* %5, align 4
  br label %23

22:                                               ; preds = %4
  store i32 -2, i32* %5, align 4
  br label %23

23:                                               ; preds = %22, %17, %11
  %24 = load i32, i32* %5, align 4
  ret i32 %24
}

declare dso_local i32 @dh_buf2key(i32, i8*, i64) #1

declare dso_local i32 @EVP_PKEY_get0_DH(i32*) #1

declare dso_local i32 @dh_key2buf(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
